fix form on mobile

--- a/sass/components/_contact-form.sass
+++ b/sass/components/_contact-form.sass
@@ -12,6 +12,8 @@
         display: inline-block
         font-size: 24px
         font-weight: 400
+        appearance: none
+        -webkit-appearance: none
         +span(1)
 
         &::placeholder
